--- a/devitti/src/main/res/layout/helper_search.xml
+++ b/devitti/src/main/res/layout/helper_search.xml
@@ -81,7 +81,7 @@
                 />
 
             <EditText
-                android:id="@+id/username_text"
+                android:id="@+id/HSEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
@@ -111,7 +111,7 @@
                 android:paddingBottom="10dp"/>
 
             <EditText
-                android:id="@+id/u11"
+                android:id="@+id/HSCountry"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
@@ -138,7 +138,7 @@
                 android:paddingBottom="10dp"/>
 
             <EditText
-                android:id="@+id/u21"
+                android:id="@+id/HSCity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
