--- a/devitti/src/main/res/layout/helper_search_result.xml
+++ b/devitti/src/main/res/layout/helper_search_result.xml
@@ -10,6 +10,11 @@
     android:orientation="vertical">
     <!-- Logo -->
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:background="#00A3E8"
+        android:id="@+id/linearLayodfut2ds" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,9 +28,15 @@
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:paddingRight="90dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:src="@drawable/listofallthecausesyousearchedfor" />
+        />
     </LinearLayout>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:background="#00A3E8"
+        android:id="@+id/linearLayout2ds" />
 
     <!-- .............................................................. -->
 
@@ -65,7 +76,12 @@
             </ScrollView>
 
             <ListView
-                android:layout_margin="10dp"
+
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/HSRList"
