My First commit after the restart of FYP (break for the ide a)

--- a/devitti/src/main/res/layout/helper_search_result.xml
+++ b/devitti/src/main/res/layout/helper_search_result.xml
@@ -84,7 +84,7 @@
 
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/HSRList"
+                android:id="@+id/newRowHSRList"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
