--- a/devitti/src/main/res/layout/single_row_list_temp_2.xml
+++ b/devitti/src/main/res/layout/single_row_list_temp_2.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="9dp"
     android:layout_marginBottom="5dp"
 
->
+    android:id="@+id/dd">
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
@@ -31,7 +31,7 @@
         android:layout_height="fill_parent"
         android:background="#ffffffff"
         android:id="@+id/linearLayoutasd2"
-        android:layout_alignBottom="@+id/typeImage" />
+        android:layout_alignBottom="@+id/NECLISTDescription2" />
 
     <LinearLayout
     android:layout_width="wrap_content"
