--- a/devitti/src/main/res/layout/cause_full_detail_view.xml
+++ b/devitti/src/main/res/layout/cause_full_detail_view.xml
@@ -101,32 +101,32 @@
                 />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/userndasdfscsdfdfamsdfe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.54"
-                android:paddingLeft="20dp"
-                android:text="Visit needy's profile: "
-                android:textColor="#344152"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:orientation="horizontal">-->
+            <!--<TextView-->
+                <!--android:id="@+id/userndasdfscsdfdfamsdfe"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="0.54"-->
+                <!--android:paddingLeft="20dp"-->
+                <!--android:text="Visit needy's profile: "-->
+                <!--android:textColor="#344152"-->
+                <!--android:textAppearance="?android:attr/textAppearanceLarge"/>-->
 
-            <ImageButton
-                android:id="@+id/CFDVProfileButtonSmall"
-                android:layout_width="86dp"
-                android:layout_height="40dp"
-                android:layout_gravity="left"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="1dp"
-                android:background="@drawable/profile_button_changer"
-                />
-        </LinearLayout>
+            <!--<ImageButton-->
+                <!--android:id="@+id/CFDVProfileButtonSmall"-->
+                <!--android:layout_width="86dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_gravity="left"-->
+                <!--android:layout_marginBottom="10dp"-->
+                <!--android:layout_marginLeft="25dp"-->
+                <!--android:layout_marginRight="20dp"-->
+                <!--android:layout_marginTop="1dp"-->
+                <!--android:background="@drawable/profile_button_changer"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
 
     </LinearLayout>
@@ -263,14 +263,14 @@
             android:layout_marginBottom="30dp">
             <ImageButton
                 android:id="@+id/CFDVLendingDetails"
-                android:layout_width="186dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_gravity="left"
                 android:layout_marginBottom="40dp"
-                android:layout_marginLeft="65dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="0dp"
                 android:background="@drawable/lendingdetails_button_changer"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="10dp"
 
                 />
 
