--- a/devitti/src/main/res/layout/new_row_for_search_result.xml
+++ b/devitti/src/main/res/layout/new_row_for_search_result.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ff8ec5d3"
+    android:background="#00A3E8"
     android:layout_marginTop="9dp"
     android:layout_marginBottom="5dp"
 
@@ -53,7 +53,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="The cause is completed"
         android:id="@+id/NewRowStatusOfCause"
-        android:textColor="#fff8ff6f"
+        android:textColor="#ffdcffe5"
 
         android:layout_toEndOf="@+id/newRowtypeImage"
         android:layout_below="@+id/NECLISTPercentageCompleted"
@@ -88,7 +88,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Education"
         android:id="@+id/NewRowCatagoryOfCause"
-        android:textColor="#fff8ff6f"
+        android:textColor="#ffdcffe5"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/typeImage"
@@ -114,7 +114,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Catagory: "
         android:id="@+id/textView423"
-        android:textColor="#fff8ff6f"
+        android:textColor="#ffdcffe5"
 
         android:layout_alignTop="@+id/typeImage"
         android:layout_toEndOf="@+id/newRowtypeImage"
